fix bugs to deploy the website

--- a/HomeWorl.html
+++ b/HomeWorl.html
@@ -62,7 +62,7 @@
 <body>
     <nav class="navbar navbar-expand-lg" id="Navbar" style="background-color: #003366;">
         <div class="container-fluid custom-navbar">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="./index.html"
                 style="font-size: 1.5rem; background: linear-gradient(45deg, #00bfff, #32cd32); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">StudentHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -72,7 +72,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" data-bs-theme="white">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./Profile.html"
+                        <a class="nav-link active" aria-current="page" href="./index.html"
                             style="color: white ;">Profile</a>
                     </li>
                     <li class="nav-item">
