--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <nav class="navbar navbar-expand-lg" id="Navbar" style="background-color: #003366;">
         <div class="container-fluid custom-navbar">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="./index.html"
                 style="font-size: 1.5rem; background: linear-gradient(45deg, #00bfff, #32cd32); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">StudentHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -95,7 +95,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" data-bs-theme="white">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./Profile.html"
+                        <a class="nav-link active" aria-current="page" href="./index.html"
                             style="color: white ;">Profile</a>
                     </li>
                     <li class="nav-item">
@@ -169,14 +169,13 @@
             <div class="row justify-content-center">
                 <div class="col-md-5 mb-4" style="margin-bottom: 1.5rem;">
                     <div class="course-box" id="Chemistry"
-                        style="border-radius: 10px; padding: 20px; text-align: center;">
-                        <h4 class="mb-4">Chemistry </h4>
+                        style=" border-radius: 10px; padding: 20px; text-align: center;">
+                        <h4 class="mb-4">Chemistry</h4>
                         <p>Lecture Time: 10:30 AM- 11:15 AM</p>
                         <p>Chapter : Chemical Transformations</p>
-                        <div style="display: flex; align-items: center; justify-content: center; margin: 3em -1.3em -1.3em -1.3em;  background-color:#dc3545 !important ; padding: 0.5em;">
-                            <img src="https://pngimg.com/uploads/student/student_PNG93.png" alt="Teacher"
-                                style="width: 50px; height: 50px; border-radius: 50%; margin-right: 10px;">
-                            <span>Teacher: Ziad Kamal</span>
+                        <div style="display: flex; align-items: center; justify-content: center; margin: 3em -1.3em -1.3em -1.3em;  background-color:#dc3545 !important ; padding: 0.5em;"> 
+                        <img src="https://pngimg.com/uploads/student/student_PNG93.png" alt="Teacher"
+                            style="width: 50px; height: 50px; border-radius: 50%; margin-right: 10px;"> <span>Teacher : Menna Ahmed</span>
                         </div>
                     </div>
                 </div>
