--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
                 <div class="card" style="border-radius: 10px; margin-top: 5em ;">
                     <div class="card-body" >
                         <h3 class="text-center mb-4">Login</h3>
-                        <form action="./Profile.html">
+                        <form action="./index.html">
                             <div class="form-group mb-3">
                                 <label for="loginEmail">Email address</label>
                                 <input type="email" class="form-control" id="loginEmail" placeholder="Enter email">
